Closed Bug 214904 Opened 23 years ago Closed 22 years ago

The ISO-8601 format should be used for the dates in install.log

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.7beta

People

(Reporter: vincent-moz, Assigned: cnst+bmo)

References

Details

(Keywords: intl)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux ppc; en-US; rv:1.5b) Gecko/20030803 Build Identifier: Mozilla/5.0 (X11; U; Linux ppc; en-US; rv:1.5b) Gecko/20030803 The install.log file currently has dates in the MM/DD/YYYY format, e.g. http://aggreg8.mozdev.org/aggreg8.xpi -- 08/03/2003 09:00:21 and this looks incorrect for some European people (for instance, in France, this would be March 8 instead of August 3). ISO-8601 dates (YYYY-MM-DD) should be used instead. And the time should be UTC time or the timezone should be written to the log file too. Reproducible: Always Steps to Reproduce:
I agree about the requested date format YYYY-MM-DD, but time should be local, regardless of time zone. Why should Moz have to figure out whether local time is UTC time? To me, that would be useless bloat.
Useless and probably confusing. Sometimes people don't properly set the timezone, and just adjust the time. This should not be a great matter, since most of these people wouldn't even bother reading an install log, but the install time is too related to the specific installation, the timezone information would be redundant.
American developers tend to ignore ISO time standards often since these don't resemble the 'native' format. I think Mozilla should be more strict in spreading such standards, since they help us to make better and easier maintanable software, e.g., ISO 8601 is automatically sortable and even has time periods and recurring intervals in a special notation. This could also simplifiy time and event handling throughout the whole code (instead of struggling with all the special formats used here and there).
People must set the timezone correctly, and if they don't, this is their problem. Mozilla shouldn't behave some way because users do wrong things (otherwise it should behave like MSIE, since most people write pages for MSIE). Well, if you think that the local time is more appropriate, OK for the local time. But as the timezone is not a constant, it would be a really good idea to write it to the log file after the time. It wouldn't be redundant for some users, and may be useful when copying logs for bug reports.
*If* you are going to indicate timezone, I suggest you use the "offset from UTC" form, for example: 2003-08-05 13:44:42 (+0200) It's much more convenient than having to "translate" what offset a specific abbreviation has. Note also that the abbreviated form (e.g. "PDT") are now obsolete in for example RFC 2822: http://www.zvon.org/tmRFC/RFC2822/Output/chapter4.html#sub3 I don't think having the timezone in the log file is terribly important myself. Using the ISO 8601 date format is important though.
Status: UNCONFIRMED → NEW
Ever confirmed: true
> *If* you are going to indicate timezone, I suggest you use the "offset from UTC" > form, for example: 2003-08-05 13:44:42 (+0200) Of course. This is standardized by the ISO 8601 too, AFAIK (by adding something like +0200 or +02:00).
Blocks: dateandtime
Keywords: intl
OS: Linux → All
Hardware: Macintosh → All
Taking bug. Creating a patch that concurs with the consensus. :-)
Assignee: ssu0262 → cnst.bmo
Status: NEW → ASSIGNED
Attachment #142701 - Flags: review?(dveditz+bmo)
Comment on attachment 142701 [details] [diff] [review] patch for xpinstall/src/nsLoggingProgressNotifier.cpp r=dveditz The install log is intended for debugging and tech support type use. Users are not expected to be looking at this file.
Attachment #142701 - Flags: review?(dveditz+bmo) → review+
Attachment #142701 - Flags: superreview?(roc)
I think the debate about time-zone ended up as "local time should be used" and "no time-zone should appear in the log". I can agree with others that using time-zone will only confuse users. That said, we are going to close the bug as soon as the simple patch is applied. Consider opening a new bug if you want to have time-zone to appear in the Install Log.
Target Milestone: --- → mozilla1.7beta
Attachment #142701 - Flags: superreview?(roc) → superreview+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: