Bug 214904 Use ISO dates in install.log p=cnst+moz%bugmail.mojo.ru (Constantine A. Murenin) r=dveditz sr=roc